--- a/css/templatemo-leadership-event.css
+++ b/css/templatemo-leadership-event.css
@@ -305,6 +305,7 @@ strong {
 .brand-text {
   display: inline-block;
   vertical-align: top;
+  color: #ffffff; 
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
