--- a/css/templatemo-leadership-event.css
+++ b/css/templatemo-leadership-event.css
@@ -451,6 +451,8 @@ footer .brand-text {
 .highlight-image {
   display: block;
   width: 100%;
+  height: 240px;          
+  object-fit: cover;      
   transition: transform 2s;
 }
 
