--- a/css/templatemo-leadership-event.css
+++ b/css/templatemo-leadership-event.css
@@ -589,7 +589,9 @@ footer .brand-text {
 }
 
 .speakers-image {
-  width: 100%;
+   height: 220px;
+   width: 100%;
+   object-fit: cover;
 }
 
 .speakers-text-info {
